syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/v1/common.proto";

package v1;

message Notifier {
    string id                  = 1;
    string name                = 2;
    string type                = 3;
    string ui_endpoint         = 4;
    bool enabled               = 5;
    map<string, string> config = 6;
}

message GetNotifiersRequest {
    string name = 1;
    string type = 2;
}

message GetNotifiersResponse {
    repeated Notifier notifiers = 1;
}

service NotifierService {

    rpc GetNotifier(ResourceByID) returns (Notifier) {
        option (google.api.http) = {
            get: "/v1/notifiers/{id}"
        };
    }

    rpc GetNotifiers(GetNotifiersRequest) returns (GetNotifiersResponse) {
        option (google.api.http) = {
            get: "/v1/notifiers"
        };
    }

    rpc PutNotifier(Notifier) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/notifiers/{id}"
            body: "*"
        };
    }

    rpc PostNotifier(Notifier) returns (Notifier) {
        option (google.api.http) = {
            post: "/v1/notifiers"
            body: "*"
        };
    }

    rpc DeleteNotifier(ResourceByID) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/notifiers/{id}"
        };
    }

}
